--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-feather": "^2.0.9",
     "react-redux": "^7.1.3",
     "react-scripts": "4.0.1",
+    "react-select": "^3.1.1",
+    "react-toggle": "^4.1.1",
     "styled-components": "^5.2.1"
   },
   "scripts": {
